start job and posts tasks to batch for a workflow
