# gen-go/server/router.go
@@ -102,6 +102,20 @@ func NewWithMiddleware(c Controller, addr string, m []func(http.Handler) http.Ha
 		r = r.WithContext(ctx)
 	})
 
+	router.Methods("GET").Path("/jobs/{workflowName}").HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		logger.FromContext(r.Context()).AddContext("op", "getJobsForWorkflow")
+		h.GetJobsForWorkflowHandler(r.Context(), w, r)
+		ctx := WithTracingOpName(r.Context(), "getJobsForWorkflow")
+		r = r.WithContext(ctx)
+	})
+
+	router.Methods("PUT").Path("/jobs/{workflowName}").HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		logger.FromContext(r.Context()).AddContext("op", "startJobForWorkflow")
+		h.StartJobForWorkflowHandler(r.Context(), w, r)
+		ctx := WithTracingOpName(r.Context(), "startJobForWorkflow")
+		r = r.WithContext(ctx)
+	})
+
 	router.Methods("POST").Path("/workflows").HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		logger.FromContext(r.Context()).AddContext("op", "newWorkflow")
 		h.NewWorkflowHandler(r.Context(), w, r)
