# swagger.yml
@@ -64,6 +64,44 @@ paths:
         404:
           $ref: "#/responses/NotFound"
 
+  /jobs/{workflowName}:
+    put:
+      summary: Start a job for a workflow
+      operationId: startJobForWorkflow
+      parameters:
+        - name: workflowName
+          in: path
+          type: string
+          required: true
+        - name: input
+          in: body
+          schema:
+            $ref: "#/definitions/JobInput"
+      responses:
+        200:
+          description: Respond with Job Id and Name
+          schema:
+            $ref: "#/definitions/Job"
+        404:
+          $ref: "#/responses/NotFound"
+    get:
+      summary: Get summary of all active jobs for workflow
+      operationId: getJobsForWorkflow
+      parameters:
+        - name: workflowName
+          in: path
+          type: string
+          required: true
+      responses:
+        200:
+          description: Job
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/Job"
+        404:
+          $ref: "#/responses/NotFound"
+
 definitions:
   InternalError:
     type: object
@@ -87,6 +125,8 @@ definitions:
     type: object
     properties:
       name: 
+        type: string
+      startAt:
         type: string
       states:
         type: array
@@ -118,7 +158,37 @@ definitions:
         type: integer
       name: 
         type: string
+      startAt:
+        type: string
       states:
         type: array
         items:
           $ref: '#/definitions/State'
+
+  Job:
+    type: object
+    properties:
+      id:
+        type: string
+      workflow:
+        $ref: '#/definitions/Workflow'
+      tasks:
+        type: array
+        items:
+          $ref: '#/definitions/Task'
+
+  Task:
+    type: object
+    properties:
+      id:
+        type: string
+      state:
+        type: string
+      status:
+        type: string
+
+  JobInput:
+    type: object
+    properties:
+      data:
+        type: string
